cmake_minimum_required(VERSION 3.25.0)
set(CMAKE_CXX_STANDARD 17)
project(CPP_Server)
include_directories(${CMAKE_SOURCE_DIR}/include)
set(SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)
file(GLOB_RECURSE SOURCES ${SOURCE_DIR}/*.cpp)
set(MARIADB_INCLUDE_DIR "/usr/include/mariadb")
set(MARIADB_LIB_DIR "/usr/lib/aarch64-linux-gnu")
include_directories(${MARIADB_INCLUDE_DIR})
add_executable(CPP_Server ${SOURCES})
link_directories(${MARIADB_LIB_DIR})
target_link_libraries(CPP_Server PRIVATE mysqlcppconn pigpio rt pthread)